fix bug of odba uploading